--- a/css/main.css
+++ b/css/main.css
@@ -707,3 +707,63 @@ p.copyright {
     font-size: 1.0em;
   }*/
 }
+@media only screen and (min-width: 768px) and (max-width: 960px){
+  .item{
+      left: 24%;
+  }
+}
+@media only screen and (min-width: 630px) and (max-width: 767px){
+  .item{
+      left: 19%;
+  }
+}
+@media only screen and (min-width: 550px) and (max-width: 629px){
+  .item{
+      left: 12%;
+      top: 112%;
+  }
+}
+@media only screen and (min-width: 500px) and (max-width: 549px){
+  .item{
+      left: 6%;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 499px){
+  .item{
+      width: 100%;
+      left: 0px;
+  }
+  .read-more a{
+    font-size: 11px;
+  }
+  .entry-title{
+    line-height: 32px;
+    text-align: center;
+  }
+  .entry-title a{
+    font-size: 28px;
+    line-height: 2px;
+  }
+  .post-inner-content{
+    text-align: center;
+  }
+  .read-more{
+    float: none;
+  }
+}
+@media only screen and (min-width: 200px) and (max-width: 353px){
+  .itemhead{
+    text-align: center;
+    padding-bottom: 2px;
+  }
+  .itemhead img{
+    float: none;
+  }
+  .itemhead h2{
+    float: none;
+    margin-left: 0px;
+  }
+  .item{
+    text-align: center;
+  }
+}
