--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,9 @@
     border-radius: 50%;
     cursor: pointer;
     -webkit-transform: scale(1);
+    -moz-transform: scale(1);
     -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
     display: block;
     z-index: 3;
 }
@@ -46,7 +48,9 @@
     position: absolute;
     border-radius: 50%;
     -webkit-transform: scale(1);
+    -moz-transform: scale(1);
     -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
     z-index: 2;
 }
 
@@ -54,6 +58,9 @@
     -webkit-transform: scale(100);
     -webkit-transition: all 0.6s ease-out;
     -webkit-transition-delay: .4s;
+    -moz-transform: scale(100);
+    -moz-transition: all 0.6s ease-out;
+    -moz-transition-delay: .4s;
 }
 
 .bubbleback {
@@ -65,6 +72,7 @@
     position: absolute;
     border-radius: 50%;
     -webkit-transform: scale(1);
+    -moz-transform: scale(1);
     opacity: 1;
 }
 
@@ -72,6 +80,10 @@
     -webkit-transform: scale(1.5);
     opacity: 0;
     -webkit-transition: all 0.3s ease-out;
+    -moz-transform: scale(1.5);
+    -webkit-opacity: 0;
+    -moz-opacity: 0;
+    -moz-transition: all 0.3s ease-out;
 }
 
 .bar {
@@ -86,6 +98,7 @@
 .first {
     position: absolute;
     -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
 }
 
 .first.active {
@@ -102,12 +115,15 @@
     transform: rotate(45deg);
     -webkit-transition: all 0.2s ease-out;
     -webkit-transition-delay: .4s;
+    -moz-transition: all 0.2s ease-out;
+    -moz-transition-delay: .4s;
 }
 
 .second {
     margin-top: 5px;
     position: absolute;
     -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
 }
 
 .second.active {
@@ -115,12 +131,15 @@
     margin-top: 10px;
     -webkit-transition: all 0.2s ease-out;
     -webkit-transition-delay: .4s;
+    -moz-transition: all 0.2s ease-out;
+    -moz-transition-delay: .4s;
 }
 
 .third {
     margin-top: 10px;
     position: absolute;
     -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
 }
 
 .third.active {
@@ -137,6 +156,8 @@
     transform: rotate(-45deg);
     -webkit-transition: all 0.2s ease-out;
     -webkit-transition-delay: .4s;
+    -moz-transition: all 0.2s ease-out;
+    -moz-transition-delay: .4s;
 }
 /*-----nav-----*/
 
